<resources>
    <string name="app_name">AuthApp</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="autorizacao">Autorização</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="novo">Nova conta</string>
    <string name="digite_aqui">Digite aqui</string>
    <string name="enviar">Enviar</string>
</resources>
